focus/operations/src/testing/snapshots/focus_operations__testing__sync__clone_contains_top_level.snap
---
source: focus/operations/src/testing/sync.rs
expression: "&profile"
---
/*
!/*/
/focus/
/tools/build_rules/
*.bzl
BUILD*
WORKSPACE*

