focus/operations/src/testing/snapshots/focus_operations__testing__sync__sync_layer_manipulation-2.snap
---
source: focus/operations/src/testing/sync.rs
expression: "std::fs::read_to_string(&profile_path)?"
---
/*
!/*/
/focus/
/library_b/
/mandatory_y/
!/mandatory_y/*/
/mandatory_y/very_important_info/
/mandatory_z/
/project_b/
/project_b/src/
!/project_b/src/*/
/project_b/src/main/
!/project_b/src/main/*/
/project_b/src/main/java/
!/project_b/src/main/java/*/
/project_b/src/main/java/com/
!/project_b/src/main/java/com/*/
/project_b/src/main/java/com/example/
!/project_b/src/main/java/com/example/*/
/project_b/src/main/java/com/example/cmdline/

