focus/operations/src/testing/snapshots/focus_operations__testing__sync__sync_layer_manipulation-3.snap
---
source: focus/operations/src/testing/sync.rs
expression: "std::fs::read_to_string(&profile_path)?"
---
/*
!/*/
/focus/
/library_a/
/library_b/
/mandatory_y/
!/mandatory_y/*/
/mandatory_y/very_important_info/
/mandatory_z/
/project_a/
/project_a/src/
!/project_a/src/*/
/project_a/src/main/
!/project_a/src/main/*/
/project_a/src/main/java/
!/project_a/src/main/java/*/
/project_a/src/main/java/com/
!/project_a/src/main/java/com/*/
/project_a/src/main/java/com/example/
!/project_a/src/main/java/com/example/*/
/project_a/src/main/java/com/example/cmdline/
/project_b/
/project_b/src/
!/project_b/src/*/
/project_b/src/main/
!/project_b/src/main/*/
/project_b/src/main/java/
!/project_b/src/main/java/*/
/project_b/src/main/java/com/
!/project_b/src/main/java/com/*/
/project_b/src/main/java/com/example/
!/project_b/src/main/java/com/example/*/
/project_b/src/main/java/com/example/cmdline/

