focus/operations/src/testing/snapshots/focus_operations__testing__sync__sync_layer_manipulation-5.snap
---
source: focus/operations/src/testing/sync.rs
expression: "std::fs::read_to_string(&profile_path)?"
---
/*
!/*/
/focus/
/mandatory_y/very_important_info/
/mandatory_z/
/tools/build_rules/

