focus/operations/src/testing/snapshots/focus_operations__testing__sync__sync_skips_checkout_with_unchanged_profile-2.snap
---
source: focus/operations/src/testing/sync.rs
expression: original_profile_contents
---
/*
!/*/
/focus/
/mandatory_y/
!/mandatory_y/*/
/mandatory_y/very_important_info/
/mandatory_z/
/tools/
!/tools/*/
/tools/build_rules/

