focus/operations/src/testing/snapshots/focus_operations__testing__sync__sync_skips_checkout_with_unchanged_profile_internal_Incremental_snapshot_3.snap
---
source: focus/operations/src/testing/sync.rs
expression: subsequent_sync_profile_contents
---
/*
!/*/
/WORKSPACE/
/focus/
/library_b/
/mandatory_y/
!/mandatory_y/*/
/mandatory_y/very_important_info/
/mandatory_z/
/tools/
!/tools/*/
/tools/build_rules/

