focus/operations/src/testing/snapshots/focus_operations__testing__sync__sync_skips_checkout_with_unchanged_profile_internal_OneShot_snapshot_1.snap
---
source: focus/operations/src/testing/sync.rs
expression: add_profile_contents
---
/*
!/*/
/focus/
/mandatory_y/
!/mandatory_y/*/
/mandatory_y/very_important_info/
/mandatory_z/

